contrast fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ header a:hover {
   border-radius: 4px;
 }
 header a:focus {
-  color: #55cad0;
+  color: #0e9aa1;
   text-decoration: none;
 }
 header.active {
@@ -113,7 +113,7 @@ header.sticky {
   position: fixed;
   right: 15px;
   top: 10px;
-  color: #55cad0;
+  color: #0e9aa1;
   font-size: 1.5em;
   z-index: 20;
   padding: 0 7px;
@@ -129,7 +129,7 @@ header.sticky {
   padding-right: 15px;
   padding-top: 10px;
   cursor: pointer;
-  color: #55cad0;
+  color: #0e9aa1;
 }
 #mobile-menu-close span {
   font-size: 0.5em;
@@ -182,7 +182,7 @@ footer {
   padding: 10px;
 }
 .social a:hover {
-  color: #55cad0;
+  color: #0e9aa1;
 }
 .btn-rounded-white {
   display: inline-block;
@@ -193,7 +193,7 @@ footer {
   transition: 0.5s ease all;
 }
 .btn-rounded-white:hover {
-  color: #55cad0;
+  color: #0e9aa1;
   background: #fff;
   text-decoration: none;
 }
@@ -219,7 +219,7 @@ footer {
   left: 0;
   right: 0;
   margin: 0 auto;
-  background: #55cad0;
+  background: #0e9aa1;
 }
 .background-alt {
   background: #f2f2f5;
@@ -268,7 +268,7 @@ footer {
   right: 0;
   bottom: 0;
   left: 0;
-  background: #55cad0;
+  background: #0e9aa1;
   opacity: 0.6;
   z-index: 1;
 }
@@ -341,7 +341,7 @@ footer {
   right: auto;
   height: 100%;
   width: 3px;
-  background: #55cad0;
+  background: #0e9aa1;
   z-index: 0;
 }
 #experience-timeline:after {
@@ -349,8 +349,8 @@ footer {
   content: "";
   width: 3px;
   height: 40px;
-  background: #55cad0;
-  background: linear-gradient(to bottom, #55cad0, rgba(52, 152, 219, 0));
+  background: #0e9aa1;
+  background: linear-gradient(to bottom, #0e9aa1, rgba(52, 152, 219, 0));
   top: 100%;
   left: 303px;
 }
@@ -391,7 +391,7 @@ footer {
   color: #fff;
   width: 50px;
   height: 50px;
-  background: #55cad0;
+  background: #0e9aa1;
   border-radius: 50%;
   float: left;
   z-index: 99;
@@ -529,7 +529,8 @@ footer {
 }
 #contact {
   padding: 50px 15px;
-  background: #55cad0;
+  /*background: #0e9aa1;*/
+  background: #0e9aa1;
   text-align: center;
 }
 #contact h2 {
